--- a/ts/webui/src/static/style/common.scss
+++ b/ts/webui/src/static/style/common.scss
@@ -1,44 +1,57 @@
 .ellipsis {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .link {
-    outline: none;
-    color: #333 !important;
-    text-decoration: none;
+	outline: none;
+	color: #333 !important;
+	text-decoration: none;
 
-    &:hover {
-        color: #0071bc !important;
-        text-decoration: underline;
-    }
+	&:hover {
+		color: #0071bc !important;
+		text-decoration: underline;
+	}
 
-    &:active,
-    &:visited {
-        color: #0071bc;
-    }
+	&:active,
+	&:visited {
+		color: #0071bc;
+	}
 }
 
 .cursor {
-    &:hover,
-    & i:hover {
-        cursor: pointer;
-    }
+	&:hover,
+	& i:hover {
+		cursor: pointer;
+	}
 }
 
 .idCopy {
-    .ms-Button--icon {
-        width: 18px;
-        height: 18px;
-        margin-left: 4px;
-    }
+	.ms-Button--icon {
+		width: 18px;
+		height: 18px;
+		margin-left: 4px;
+	}
 
-    i {
-        color: #33333c;
-    }
+	i {
+		color: #33333c;
+	}
 }
 
 .ms-DetailsRow {
-    height: 32px;
+	height: 32px;
+}
+
+.gap {
+	&-margin-left {
+		margin-left: 10px !important;
+	}
+	&-margin-bottom {
+		margin-bottom: 10px !important;
+	}
+}
+
+.input-height {
+	height: 26px;
 }
