update project detail layout

--- a/ts/webui/src/static/style/common.scss
+++ b/ts/webui/src/static/style/common.scss
@@ -77,3 +77,12 @@ $themeBlue: #0071bc;
 .input-padding {
     padding-left: 10px;
 }
+
+.relative{
+    position: relative;
+}
+
+.absoluteRight{
+    position: absolute;
+    right: 0;
+}
