--- a/ts/webui/src/static/style/experiment/project.scss
+++ b/ts/webui/src/static/style/experiment/project.scss
@@ -22,3 +22,58 @@
 .noProject{
     margin: 34px 0 0 2px;
 }
+
+// same as oview page overview.scss style
+$boxPadding: 24px;
+$boxBorderRadius: 5px;
+$boxGapPadding: 10px;
+
+.project {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-auto-rows: 150px;
+
+    > div {
+        background: #fff;
+        padding: $boxPadding;
+        border-radius: $boxBorderRadius;
+        box-sizing: border-box;
+    }
+
+    &-details {
+        grid-column: 1 / 3;
+        grid-row: 1 / 4;
+        margin-right: $boxGapPadding;
+
+        .basic{
+            p{
+                font-size: 18px;
+                font-weight: 500;
+            }
+        }
+    }
+
+    &-graph {
+        grid-column: 3 / 9;
+        grid-row: 1 / 4;
+    }
+
+    &-list {
+        grid-column: 1 / 9;
+        grid-row: 4 / 7;
+        margin: $boxGapPadding 0 24px 0 !important;
+
+        h1{
+            font-size: 20px;
+            font-weight: 500;
+            margin-bottom: 20px;
+        }
+    }
+}
+
+.position{
+    .remove{
+        position: absolute;
+        right: 90px;
+    }
+}
